
[workspace.package]
authors = ["Dragan Rakita <dragan0rakita@gmail.com>"]
description = "REVM - Rust Ethereum Virtual Machine"
edition = "2021"
keywords = ["no_std", "ethereum", "evm", "revm"]
license = "MIT"
name = "revm"
repository = "https://github.com/bluealloy/revm"
version = "3.1.1"

[workspace]
resolver = "2"
members = [
    "bins/*",
    "crates/*",
    "examples/*",
]
default-members = ["crates/revm"]

[profile.release]
lto = true
codegen-units = 1

[profile.ethtests]
inherits = "test"
opt-level = 3

[workspace.dependencies]
# workspace crates
anyhow = { version = "1.0.70" }
bytes = { version = "1.4", default-features = false }
tokio = { version = "1.27.0", default-features = false }
hex = { version = "0.4", default-features = false }
ethers = { version = "2.0", default-features = false }
